[package]
name = "racket-sys"
version = "0.1.0"
authors = ["rn7s2 <mail@rn7s2.cn>"]
edition = "2021"
build = "build.rs"
license = "MIT"
categories = ["external-ffi-bindings"]
keywords = ["ffi", "bindings", "scheme", "scripting", "interpreter"]
description = "Low level Racket language bindings for Rust"
repository = "https://github.com/rn7s2/racket-sys"
documentation = "https://docs.rs/racket-sys"

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
