[package]
name = "racket-sys"
version = "0.3.1"
authors = ["rn7s2 <mail@rn7s2.cn>"]
edition = "2021"
build = "build.rs"
license = "MIT"
categories = ["external-ffi-bindings"]
keywords = ["ffi", "bindings", "scheme", "scripting", "interpreter"]
description = "Low level Racket language bindings for Rust"
repository = "https://github.com/rn7s2/racket-sys"
documentation = "https://rn7s2.github.io/racket-sys/racket_sys/"


[features]
default = ["bundled"]
bundled = ["dep:git2"]

[build-dependencies]
bindgen = "0.69.4"
git2 = { version = "0.19.0", optional = true }

[target.x86_64-pc-windows-msvc.build-dependencies]
vcvars = "0.1.6"
